@@ -489,6 +489,9 @@ C-LEVEL FACILITIES
     o	R_alloc's limit on 64-bit systems has been raised from just
 	under 2^31 bytes to just under 2^34, and is now checked.
 
+    o	New math utility functions  log1pmx(x), lgamma1p(x),
+	logspace_add(logx, logy), and logspace_sub(logx, logy).
+
 
 DEPRECATED & DEFUNCT
 
